--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@tanstack/react-table": "^8.16.0",
     "axios": "^1.6.8",
+    "clsx": "2.1.1",
     "next": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
