--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@tanstack/react-table": "^8.16.0",
-    "axios": "^1.6.8",
+    "chart.js": "4.4.2",
     "clsx": "2.1.1",
     "next": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-chartjs-2": "5.2.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
