--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@headlessui/react":"2.0.3",
+    "@heroicons/react": "2.1.3",
     "@tanstack/react-table": "^8.16.0",
+    "@radix-ui/react-slot":"latest",
+    "@radix-ui/react-label":"latest",
+    "@radix-ui/react-select":"latest",
+    "@radix-ui/react-switch":"latest",
+    "@radix-ui/react-icons":"latest",
+    "class-variance-authority":"0.7.0",
     "chart.js": "4.4.2",
     "clsx": "2.1.1",
     "next": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-chartjs-2": "5.2.0",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "tailwind-merge":"2.3.0",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
