--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@headlessui/react":"2.0.3",
     "@heroicons/react": "2.1.3",
     "@tanstack/react-table": "^8.16.0",
+    "@radix-ui/react-dialog": "latest",
     "@radix-ui/react-slot":"latest",
     "@radix-ui/react-label":"latest",
     "@radix-ui/react-select":"latest",
     "@radix-ui/react-switch":"latest",
     "@radix-ui/react-icons":"latest",
+    "@radix-ui/react-popover": "latest",
     "class-variance-authority":"0.7.0",
     "chart.js": "4.4.2",
     "clsx": "2.1.1",
+    "cmdk": "0.2.0",
+    "lucide-react": "0.378.0",
     "next": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
