--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@headlessui/react":"2.0.3",
     "@heroicons/react": "2.1.3",
     "@tanstack/react-table": "^8.16.0",
+    "@radix-ui/react-checkbox": "latest",
     "@radix-ui/react-dialog": "latest",
+    "@radix-ui/react-dropdown-menu": "latest",
     "@radix-ui/react-slot":"latest",
     "@radix-ui/react-label":"latest",
     "@radix-ui/react-select":"latest",
