--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-checkbox": "latest",
     "@radix-ui/react-dialog": "latest",
     "@radix-ui/react-dropdown-menu": "latest",
+    "@radix-ui/react-navigation-menu": "latest",
     "@radix-ui/react-slot":"latest",
     "@radix-ui/react-label":"latest",
     "@radix-ui/react-select":"latest",
