--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "chart.js": "4.4.2",
     "clsx": "2.1.1",
     "cmdk": "0.2.0",
+    "date-fns": "3.6.0",
     "lucide-react": "0.378.0",
     "next": "latest",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-chartjs-2": "5.2.0",
     "server-only": "^0.0.1",
