--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
-    "@headlessui/react":"2.0.3",
     "@heroicons/react": "2.1.3",
+    "@hookform/resolvers":"3.4.2",
     "@tanstack/react-table": "^8.16.0",
     "@radix-ui/react-checkbox": "latest",
     "@radix-ui/react-dialog": "latest",
@@ -34,9 +34,11 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-chartjs-2": "5.2.0",
+    "react-hook-form":"7.51.5",
     "server-only": "^0.0.1",
     "tailwind-merge":"2.3.0",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "zod":"3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
