--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-toast" : "latest",
     "@radix-ui/react-icons":"latest",
     "@radix-ui/react-popover": "latest",
+    "@types/fuzzaldrin-plus": "0.6.5",
+    "fuzzaldrin-plus": "0.6.0",
     "class-variance-authority":"0.7.0",
     "chart.js": "4.4.2",
     "clsx": "2.1.1",
@@ -36,6 +38,7 @@
     "react-dom": "^18.3.1",
     "react-chartjs-2": "5.2.0",
     "react-hook-form":"7.51.5",
+    "rxjs": "7.8.1",
     "server-only": "^0.0.1",
     "tailwind-merge":"2.3.0",
     "tailwindcss-animate": "1.0.7",
